# midi-drums

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HUMANIZATION_IMPROVEMENTS.md  HUMANIZATION_SUMMARY.md  README.md  ai_requirements.in  dev_requirements.in  generate_complete_doom_blues.py  generate_complex_song.py  generate_doom_blues_enhanced_humanization.py  generate_fixed_complex_song.py  generate_metal_drum_track.py  generate_organized_complex_song.py  generate_simple_complex_song.py  generate_validated_doom_blues.py  inspect_midi_notes.py  justfile  migrate_from_original.py  pyproject.toml  pytest.ini  test_ai_generation.py  test_chambers_bug_fix.py  test_constants_integration.py  test_funk_refactored.py  test_jazz_refactored.py  test_new_architecture.py  test_pattern_templates.py
.claude/: system-prompt.md
.github/workflows/: docs.yml  tests.yml
claudedocs/: AI_BACKEND_MIGRATION.md  AI_GENERATION_SUCCESS.md  AI_INTEGRATION.md  COMPLEX_SONG_SUMMARY.md  GENRE_CONTEXT_ADAPTATION_DESIGN.md  ORGANIZED_SONG_PROJECT_SUCCESS.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md
claudedocs/archive/: README.md
claudedocs/archive/2025-09-september/: BUG_FIX_SUMMARY.md  FINAL_RESULTS_COMPARISON.md  GENRE_CONTEXT_ADAPTATION_COMPLETE.md
docs/: CI_CD.md  PHYSICAL_FEASIBILITY_FIXES.md  REAPER_INTEGRATION.md  REAPER_TASKS.md  VALIDATION_AND_HUMANIZATION.md  make.py
docs/pdoc_templates/: frame.html.jinja2
docs/site-pages/: index.html  quickstart.html  reaper.html  recipes.html
examples/: __init__.py  ai_examples.py  basic_usage.py  reaper_export_advanced.py  reaper_export_basic.py
midi_drums/: __init__.py  __main__.py
midi_drums/ai/: __init__.py  ai_api.py  backends.py  logging_config.py  pattern_generator.py  schemas.py
midi_drums/ai/agents/: __init__.py  pattern_agent.py  pattern_agent_v2.py
midi_drums/ai/prompts/: __init__.py  agent_system.md  audio_analysis.md  intent_classification.md  model_routing.md  pattern_analysis.md  pattern_generation.md  song_composition.md
midi_drums/api/: __init__.py  cli.py  python_api.py
midi_drums/config/: __init__.py  constants.py
midi_drums/core/: __init__.py  engine.py
midi_drums/engines/: __init__.py  midi_engine.py  reaper_engine.py
midi_drums/exporters/: __init__.py  reaper_exporter.py
midi_drums/humanization/: __init__.py  advanced_humanization.py
midi_drums/models/: __init__.py  kit.py  pattern.py  reaper_models.py  song.py
midi_drums/modifications/: __init__.py  drummer_mods.py
midi_drums/patterns/: __init__.py  templates.py
midi_drums/plugins/: __init__.py  base.py
midi_drums/plugins/drummers/: __init__.py  bonham.py  bonham_refactored.py  chambers.py  chambers_refactored.py  composite_doom_blues.py  dee.py  dee_refactored.py  hoglan.py  hoglan_refactored.py  porcaro.py  porcaro_refactored.py  roeder.py  roeder_refactored.py  weckl.py  weckl_refactored.py
midi_drums/plugins/genres/: __init__.py  funk.py  funk_refactored.py  jazz.py  jazz_refactored.py  metal.py  metal_refactored.py  rock.py  rock_refactored.py
midi_drums/templates/: __init__.py
midi_drums/utils/: __init__.py  pattern_fixer.py
midi_drums/validation/: __init__.py  physical_constraints.py
tests/: __init__.py  conftest.py  test_env_loading.py
tests/ai/: conftest.py  test_ai_generation.py  test_backend_abstraction.py  test_hoglan_plugin.py
tests/integration/: test_all_drummer_plugins.py  test_composite_drummer_validation.py  test_generation.py  test_genre_context_adaptation.py  test_new_architecture.py  test_new_genre_plugins.py  test_original_failing_scenario.py  test_reaper_integration.py
tests/unit/: test_all_drummers_refactored.py  test_drummer_modifications.py  test_metal_refactored.py  test_rock_refactored.py
tests/unit/engines/: __init__.py  test_reaper_engine.py
tests/unit/humanization/: __init__.py  test_advanced_humanization.py
tests/unit/utils/: test_pattern_fixer.py
tests/unit/validation/: test_physical_constraints.py
